--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                         <input class="p-1 border border-1 me-2 rounded-pill border-opacity-0" type="search"
                             placeholder="Search" aria-label="Search">
                         <div class="search-icon position-absolute">
-                            <img src="assets/navbar/search.svg" alt="">
+                            <img src="assets/navbar/search.svg" alt="search">
                         </div>
                     </div>
                     <div class="add-user" role="button">
-                        <img src="assets/navbar/user.svg" alt="">
+                        <img src="assets/navbar/user.svg" alt="add">
                     </div>
                     <div class="cart" role="button">
-                        <img src="assets/navbar/bag.svg" alt="">
+                        <img src="assets/navbar/bag.svg" alt="cart">
                     </div>
                 </form>
             </div>
@@ -61,7 +61,7 @@
     <section class="hero d-flex position-relative flex-column mb-5">
         <div class="text d-flex flex-column p-4 justify-content-around gap-5">
             <div class="leaf">
-                <img src="assets/hero/leaf.svg" alt="">
+                <img src="assets/hero/leaf.svg" alt="leaf">
             </div>
             <div class="love-nature d-flex align-items-center gap-3">
                 <span class="bar"></span>
@@ -75,46 +75,35 @@
                 <button class="buy-a-plant rounded-pill border-0 p-2 px-4">Buy a plant</button>
             </div>
             <div class="icons d-flex gap-5">
-                <img class="" src="assets/hero/facebook.svg" alt="">
-                <img class="" src="assets/hero/instagram.svg" alt="">
-                <img class="" src="assets/hero/pinterest.svg" alt="">
+                <img class="" src="assets/hero/facebook.svg" alt="fb">
+                <img class="" src="assets/hero/instagram.svg" alt="insta">
+                <img class="" src="assets/hero/pinterest.svg" alt="pinterest">
             </div>
         </div>
-        <div class="carousel-div  end-0">
+        <div class="carousel-div  end-0 ">
             <div class="carousel-component">
                 <div class="carousel-wrapper-div d-flex" id="carousel-wrapper">
 
-                    <div class="carousel-picture w-75" id="carousel-0">
-                        <img class="w-100 h-100" src="assets/hero/potPlant.png" alt="">
-                    </div>
-                    <div class="carousel-picture w-75" id="carousel-1">
-                        <img class="w-100 h-100" src="assets/hero/leaf.webp" alt="">
-                    </div>
-                    <div class="carousel-picture w-75" id="carousel-2">
-                        <img class="w-100 h-100" src="assets/hero/potPlant.png" alt="">
-                    </div>
-                    <div class="carousel-picture w-75" id="carousel-3">
-                        <img class="w-100 h-100" src="assets/hero/leaf.webp" alt="">
-                    </div>
-
                 </div>
             </div>
-            <div class="control-buttons d-flex justify-content-center align-items-center gap-3">
-                <div class="left d-flex justify-content-center align-items-center" id="left-carousel"> <img
-                        src="assets/hero/left.svg" alt=""></div>
-                1
-                <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25"
-                    aria-valuemin="0" aria-valuemax="100">
-                    <div class="progress-bar bg-success" style="width: 25%"></div>
+            <div class="button">
+                <div class="control-buttons d-flex justify-content-center align-items-center gap-3">
+                    <div class="left d-flex justify-content-center align-items-center" id="left-carousel"> <img
+                            src="assets/hero/left.svg" alt="left"></div>
+                    1
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-success" style="width: 25%"></div>
+                    </div>
+                    4
+                    <div class="right d-flex justify-content-center align-items-center" id="right-carousel"><img
+                            src="assets/hero/right.svg" alt="right"></div>
                 </div>
-                4
-                <div class="right d-flex justify-content-center align-items-center" id="right-carousel"><img
-                        src="assets/hero/right.svg" alt=""></div>
             </div>
         </div>
     </section>
 
-    <section class="plant-collection">
+    <section class="plant-collection pt-5">
         <div class="title text-center fs-3 playfair fw-bolder mb-3">
             Plant Collection
         </div>
@@ -122,37 +111,37 @@
             <div class="d-flex gap-5 overflow-scroll mx-4 plants-collection-scroll" id="plants-collection-scroll">
                 <div class="plants">
                     <div class="image mb-2">
-                        <img src="assets/plantCollection/paradise.svg" alt="">
+                        <img src="assets/plantCollection/paradise.svg" alt="paradise">
                     </div>
                     <h3 class="playfair fs-5">Bird of paradise</h3>
                 </div>
                 <div class="plants">
                     <div class="image mb-2">
-                        <img src="assets/plantCollection/rubber.svg" alt="">
+                        <img src="assets/plantCollection/rubber.svg" alt="plant">
                     </div>
                     <h3 class="playfair fs-5">Rubber plants</h3>
                 </div>
                 <div class="plants">
                     <div class="image mb-2">
-                        <img src="assets/plantCollection/pearl.svg" alt="">
+                        <img src="assets/plantCollection/pearl.svg" alt="plant">
                     </div>
                     <h3 class="playfair fs-5">String of pearls</h3>
                 </div>
                 <div class="plants">
                     <div class="image mb-2">
-                        <img src="assets/plantCollection/paradise.svg" alt="">
+                        <img src="assets/plantCollection/paradise.svg" alt="plant">
                     </div>
                     <h3 class="playfair fs-5">Bird of paradise</h3>
                 </div>
                 <div class="plants">
                     <div class="image mb-2">
-                        <img src="assets/plantCollection/rubber.svg" alt="">
+                        <img src="assets/plantCollection/rubber.svg" alt="plant">
                     </div>
                     <h3 class="playfair fs-5">Rubber plants</h3>
                 </div>
                 <div class="plants">
                     <div class="image mb-2">
-                        <img src="assets/plantCollection/pearl.svg" alt="">
+                        <img src="assets/plantCollection/pearl.svg" alt="plant">
                     </div>
                     <h3 class="playfair fs-5">String of pearls</h3>
                 </div>
@@ -160,23 +149,23 @@
             </div>
             <div class="buttons d-flex flex-column justify-content-center align-items-center me-lg-3 gap-2">
                 <div class="left d-flex justify-content-center" id="plant-collection-left"> <img
-                        src="assets/plantCollection/right.svg" alt="">
+                        src="assets/plantCollection/right.svg" alt="right">
                 </div>
                 <div class="rigt d-flex justify-content-center" id="plant-collection-right"><img
-                        src="assets/plantCollection/left.svg" alt=""></div>
+                        src="assets/plantCollection/left.svg" alt="left"></div>
             </div>
         </div>
     </section>
 
     <section class="journey d-flex flex-column flex-lg-row mt-5 position-relative">
         <div class="floating-tree position-absolute top-0 end-0">
-            <img src="assets/journey/floatTree.svg" alt="">
+            <img src="assets/journey/floatTree.svg" alt="tree">
         </div>
         <div class="floating-leaf position-absolute top-0 start-0">
-            <img src="assets/journey/floatLeaf.svg" alt="">
+            <img src="assets/journey/floatLeaf.svg" alt="leaf">
         </div>
         <div class="plant d-flex justify-content-center">
-            <img src="assets/journey/alocasia.svg" alt="">
+            <img src="assets/journey/alocasia.svg" alt="alocaisia">
         </div>
         <div class="text d-flex flex-column gap-4 p-5 justify-content-center">
             <div class="title playfair fs-3">Our journey</div>
@@ -193,26 +182,26 @@
 
     <section class="advantages m-2 mb-5 position-relative">
         <div class="title playfair fs-3 p-2 m-4">Our advantages</div>
-        <div class="floatLeafUp position-absolute top-0"><img src="assets/advantages/floatLeafUp.svg" alt=""></div>
-        <div class="floatLeaf position-absolute"><img src="assets/advantages/floatLeaf.svg" alt=""></div>
+        <div class="floatLeafUp position-absolute top-0"><img src="assets/advantages/floatLeafUp.svg" alt="leaf"></div>
+        <div class="floatLeaf position-absolute"><img src="assets/advantages/floatLeaf.svg" alt="leaf"></div>
         <div class="d-flex justify-content-center gap-5 flex-wrap">
             <div class="p-5 rounded position-relative">
                 <div class="icon position-absolute rounded-circle d-flex justify-content-center align-items-center">
-                    <img src="assets/advantages/wateringCan.svg" alt="">
+                    <img src="assets/advantages/wateringCan.svg" alt="can">
                 </div>
                 <h2 class="fs-4 ms-3 mb-2">Easy order</h2>
                 <p class="text-black-50 ms-3">It is a long established fact that a reader will be.</p>
             </div>
             <div class="p-5 rounded position-relative">
                 <div class="icon position-absolute rounded-circle d-flex justify-content-center align-items-center">
-                    <img src="assets/advantages/fastDelivery.svg" alt="">
+                    <img src="assets/advantages/fastDelivery.svg" alt="delivery">
                 </div>
                 <h2 class="fs-4 ms-3 mb-2">Fast delivery</h2>
                 <p class="text-black-50 ms-3">It is a long established fact that a reader will be.</p>
             </div>
             <div class=" p-5 rounded position-relative">
                 <div class="icon position-absolute rounded-circle d-flex justify-content-center align-items-center">
-                    <img src="assets/advantages/order.svg" alt="">
+                    <img src="assets/advantages/order.svg" alt="order">
                 </div>
                 <h2 class="fs-4 ms-3 mb-2">Easy order</h2>
                 <p class="text-black-50 ms-3">It is a long established fact that a reader will be.</p>
@@ -236,7 +225,7 @@
 
     <section class="choose mb-4 position-relative">
         <div class="leaf position-absolute top-0 end-0">
-            <img src="assets/choose/leaf.svg" alt="">
+            <img src="assets/choose/leaf.svg" alt="leaf">
         </div>
         <div class="fs-3 text-center playfair m-5">Choosing the right plant</div>
         <div class="d-flex flex-wrap justify-content-center gap-5">
@@ -249,14 +238,14 @@
             </div>
             <div class="card p-4 border-0 d-flex flex-column gap-3">
                 <div class="image d-flex justify-content-center align-items-center">
-                    <img src="assets/choose/indoor.svg" alt="">
+                    <img src="assets/choose/indoor.svg" alt="indoor">
                 </div>
                 <div class="title playfair fs-4">Indoor plants</div>
                 <p class="text-black-50">It is a long established fact that a reader will be distracted by the</p>
             </div>
             <div class="card p-4 border-0 d-flex flex-column gap-3">
                 <div class="image d-flex justify-content-center align-items-center">
-                    <img src="assets/choose/home.svg" alt="">
+                    <img src="assets/choose/home.svg" alt="home">
                 </div>
                 <div class="title playfair fs-4">Home plants</div>
                 <p class="text-black-50">It is a long established fact that a reader will be distracted by the</p>
@@ -277,10 +266,10 @@
             <button class="text-white border-0 rounded-pill p-2 px-4">Read the blog</button>
         </div>
         <div class="video rounded">
-            <img class="rounded" src="assets/plantCare/video.png" alt="">
+            <img class="rounded" src="assets/plantCare/video.png" alt="video">
         </div>
         <div class="leaf position-absolute">
-            <img src="assets/plantCare/leaf.svg" alt="">
+            <img src="assets/plantCare/leaf.svg" alt="leaf">
         </div>
     </section>
 
@@ -290,7 +279,7 @@
             <div class="wrapper d-flex gap-5 align-items-center" id="clients-wrapper">
                 <div class="carousel-card p-5 rounded position-relative">
                     <div class="image position-absolute">
-                        <img src="assets/whatClient/girl.png" alt="">
+                        <img src="assets/whatClient/girl.png" alt="girl">
                     </div>
                     <div class="text">"It is a long established fact that a reader will be distracted by the
                         readable content of a page when It is a long .It
@@ -299,11 +288,11 @@
                         a reader."</div>
                 </div>
                 <div class="next d-flex justify-content-center align-items-center" onclick="nextClient()">
-                    <img src="assets/whatClient/arrow.svg" alt="">
+                    <img src="assets/whatClient/arrow.svg" alt="arrow">
                 </div>
                 <div class="carousel-card p-5 rounded position-relative">
                     <div class="image position-absolute">
-                        <img src="assets/whatClient/girl.png" alt="">
+                        <img src="assets/whatClient/girl.png" alt="girl">
                     </div>
                     <div class="text">"It is a long established fact that a reader will be distracted by the
                         readable content of a page when It is a long .It
@@ -312,11 +301,11 @@
                         a reader."</div>
                 </div>
                 <div class="next d-flex justify-content-center align-items-center" onclick="nextClient()">
-                    <img src="assets/whatClient/arrow.svg" alt="">
+                    <img src="assets/whatClient/arrow.svg" alt="arrow">
                 </div>
                 <div class="carousel-card p-5 rounded position-relative">
                     <div class="image position-absolute">
-                        <img src="assets/whatClient/girl.png" alt="">
+                        <img src="assets/whatClient/girl.png" alt="girl">
                     </div>
                     <div class="text">It is a long established fact that a reader will be distracted by the
                         readable content of a page when It is a long .It
@@ -325,7 +314,7 @@
                         a reader."</div>
                 </div>
                 <div class="next d-flex justify-content-center align-items-center" onclick="firstClient()">
-                    <img src="assets/whatClient/arrow.svg" alt="">
+                    <img src="assets/whatClient/arrow.svg" alt="arrow">
                 </div>
             </div>
         </div>
@@ -340,13 +329,13 @@
                     is a long established fact that a reader will be distracted by the.</p>
                 <div class="d-flex gap-4">
                     <div class="icon d-flex justify-content-center align-items-center"> <img
-                            src="assets/footer/instagram.svg" alt=""></div>
+                            src="assets/footer/instagram.svg" alt="insta"></div>
                     <div class="icon d-flex justify-content-center align-items-cente"><img
-                            src="assets/footer/facebook.svg" alt=""></div>
+                            src="assets/footer/facebook.svg" alt="facebook"></div>
                     <div class="icon d-flex justify-content-center align-items-cente"> <img
-                            src="assets/footer/youtube.svg" alt=""></div>
+                            src="assets/footer/youtube.svg" alt="youtube"></div>
                     <div class="icon d-flex justify-content-center align-items-cente"><img
-                            src="assets/footer/twitter.svg" alt=""></div>
+                            src="assets/footer/twitter.svg" alt="twitter"></div>
                 </div>
             </div>
             <div class="footer-options d-flex justify-content-center gap-5 p-5 flex-wrap">
